# haskell-afp

./: README.md  haskell-afp.cabal
app/: Main.hs
src/: DataTypes.hs  EtherImplementation.hs  ExtensibleEffectsImplementation.hs  LensImplementation.hs
