name:                haskell-afp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-afp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DataTypes
                     , ExtensibleEffectsImplementation
                     , EtherImplementation
                     , LensImplementation
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , extensible-effects
                     , ether
                     , lens
  default-language:    Haskell2010

executable haskell-afp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , extensible-effects
                     , haskell-afp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-afp
